// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GoodsItem  Component must be created 1`] = `
<Card
  as="div"
  body={false}
>
  <CardHeader>
    <CardTitle>
      Honda Civic
    </CardTitle>
    <CardText>
      undefined $
    </CardText>
  </CardHeader>
  <CardBody
    className="d-flex flex-column"
  >
    <CardText
      style={
        Object {
          "padding": "10px",
        }
      }
    >
      Lorem ipsum dolor sit amet consectetur adipisicing elit.         Blanditiis provident quo quaerat repellat fuga debitis nemo voluptates         quis voluptate, dolorem modi non? Nisi, maxime a.
    </CardText>
    <Button
      active={false}
      disabled={false}
      onClick={[Function]}
      type="button"
      variant="primary"
    >
      Add to backet
    </Button>
  </CardBody>
</Card>
`;

exports[`GoodsItem  Component must be rendered after creation 1`] = `
<Card
  as="div"
  body={false}
>
  <CardHeader>
    <CardTitle />
    <CardText>
      undefined $
    </CardText>
  </CardHeader>
  <CardBody
    className="d-flex flex-column"
  >
    <CardText
      style={
        Object {
          "padding": "10px",
        }
      }
    />
    <Button
      active={false}
      disabled={false}
      onClick={[Function]}
      type="button"
      variant="primary"
    >
      Add to backet
    </Button>
  </CardBody>
</Card>
`;
